--- a/src/views/home/index.hbs
+++ b/src/views/home/index.hbs
@@ -2,9 +2,9 @@
 <section id="search">
     <h1>Search</h1>
     <form  method="GET" class="form">
-        <input type="text" class="search" name="search" placeholder="Title...">
-        <input type="text" name="genre" class="genre" placeholder="Genre...">
-        <input type="number" name="year" class="year" placeholder="Year...">
+        <input type="text" value="{{filter.search}}" class="search" name="search" placeholder="Title...">
+        <input type="text" value="{{filter.genre}}" name="genre" class="genre" placeholder="Genre...">
+        <input type="number" value="{{filter.year}}" name="year" class="year" placeholder="Year...">
         <input type="submit" value="search">
     </form>
 </section>
