--- a/src/views/movies/details.hbs
+++ b/src/views/movies/details.hbs
@@ -18,11 +18,25 @@
                 </div>
 
                 <p class="disc">Description: {{movie.description}}</p>
+                <div>
+                    <a href="/cast/attach/{{movie._id}} " class="details" >Attach</a>
+                </div>
             </div>
         </div>
         <div class="card_right">
             <img src="{{movie.imageUrl}}" alt="${{movie.title}}">
         </div>
     </div>
-
+    {{#each movie.casts}}
+    <div class="cast-card">
+        <div class="card-img">
+            <img src="{{imageUrl}}" alt="{{name}}">
+        </div>
+        <div class="cast-info">
+            <h1>{{name}}</h1>
+            <h3>Age: {{age}}</h3>
+            <h3>Born: {{born}}</h3>
+        </div>
+    </div>
+    {{/each}}
 </section>
