--- a/src/views/cast/cast-attach.hbs
+++ b/src/views/cast/cast-attach.hbs
@@ -8,8 +8,8 @@
                 <label for="cast">Cast</label>
                 <select id="cast" name="cast">
                     <option value="none" selected>--------</option>
-                    {{#each casts}}
-                    <option value="Cast 1">{{name}}</option>
+                    {{#each movie.casts}}
+                    <option value="{{id}}">{{name}}</option>
                     {{/each}}
                 </select>
                 <div id="center-btn">
