--- a/src/views/partials/movie.hbs
+++ b/src/views/partials/movie.hbs
@@ -1,6 +1,6 @@
 <div class="flip flip-vertical">
     <div class="front">
-        <img src="{{imageUrl}}" alt="Jungle-Cruise">
+        <img src="{{imageUrl}}" alt="{{title}}">
     </div>
     <div class="back">
         <h1>{{title}}</h1>
