Add delete functionallity

--- a/src/views/movies/details.hbs
+++ b/src/views/movies/details.hbs
@@ -20,7 +20,7 @@
                 {{#if isCreator}}
                 <div class="details-btn">
                     <a href="/movie/{{movie._id}}/edit" class="details">Edit</a>
-                    <a href="/movie/{{movie._id}}/delete " class="details">Delete</a>
+                    <a href="/movies/{{movie._id}}/delete " class="details">Delete</a>
                     <a href="/cast/attach/{{movie._id}} " class="details">Attach</a>
                 </div>
                 {{/if}}
