Add edit page but hardcoded

--- a/src/views/movies/details.hbs
+++ b/src/views/movies/details.hbs
@@ -19,7 +19,7 @@
                 <p class="disc">Description: {{movie.description}}</p>
                 {{#if isCreator}}
                 <div class="details-btn">
-                    <a href="/movie/{{movie._id}}/edit" class="details">Edit</a>
+                    <a href="/movies/{{movie._id}}/edit" class="details">Edit</a>
                     <a href="/movies/{{movie._id}}/delete " class="details">Delete</a>
                     <a href="/cast/attach/{{movie._id}} " class="details">Attach</a>
                 </div>
