--- a/src/views/movies/edit.hbs
+++ b/src/views/movies/edit.hbs
@@ -10,7 +10,7 @@
             <ul class="noBullet">
                 <li>
                     <label for="title">Title:</label>
-                    <input type="text" class="inputFields" id="title" name="title" value="" />
+                    <input type="text" class="inputFields" id="title" name="title" value="{{movie.title}}" />
                 </li>
                 <li>
                     <label for="category">Category:</label>
@@ -25,27 +25,27 @@
                 </li>
                 <li>
                     <label for="genre">Genre:</label>
-                    <input type="text" class="inputFields" id="genre" name="genre" value="" />
+                    <input type="text" class="inputFields" id="genre" name="genre" value="{{movie.genre}}" />
                 </li>
                 <li>
                     <label for="director">Director:</label>
-                    <input type="text" class="inputFields" id="director" name="director" value="" />
+                    <input type="text" class="inputFields" id="director" name="director" value="{{movie.director}}" />
                 </li>
                 <li>
                     <label for="date">Year:</label>
-                    <input type="number" class="inputFields" id="year" name="date" value="" />
+                    <input type="number" class="inputFields" id="year" name="date" value="{{movie.date}}" />
                 </li>
                 <li>
                     <label for="image">Movie Poster:</label>
-                    <input type="text" class="inputFields" id="image" name="imageUr"value="" />
+                    <input type="text" class="inputFields" id="image" name="imageUrl"value="{{movie.imageUrl}}" />
                 </li>
                 <li>
                     <label for="image">Rating:</label>
-                    <input type="text" class="inputFields" id="rating" name="rating" value="" />
+                    <input type="text" class="inputFields" id="rating" name="rating" value="{{movie.rating}}" />
                 </li>
                 <li>
                     <label for="description">Description:</label>
-                    <textarea id="description" class="inputFields" name="description">The youngest of King Triton's daughters, Ariel is a beautiful and spirited young mermaid with a thirst for adventure. Longing to find out more about the world beyond the sea, Ariel visits the surface and falls for the dashing Prince Eric. Following her heart, she makes a deal with the evil sea witch, Ursula, to experience life on land.</textarea>
+                    <textarea id="description" class="inputFields" name="description">{{movie.description}}</textarea>
                 </li>
                 <li id="center-btn">
                     <button id="edit-btn">Edit</button>
